<resources>
    <string name="app_name">Pokedex</string>
    <string name="str_img_desc">Descripcion de Imagen</string>
    <string name="str_hint_nombre">Nombre del pokemón</string>
    <string name="str_hint_tipo">Tipo</string>
    <string name="str_btn_login">Ingresar</string>
    <string name="str_titulo_pokemons">Pokemons</string>
    <string name="nombre">Nombre: </string>
    <string name="tipo">Tipo: </string>
    <string name="id">Id: </string>
    <string name="prueba">Pikachu</string>
</resources>
