<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgPokemon"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@mipmap/bulbasaur"
        android:contentDescription="@string/str_img_desc"
        android:padding="4dp"
        android:scaleType="fitCenter"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/nombrePokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prueba"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tipoPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prueba"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/idPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prueba"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>